Fix z-index issue with drop down. Fixes #128.

--- a/css/less/bbpress.less
+++ b/css/less/bbpress.less
@@ -409,6 +409,7 @@ span.bbp-admin-links a {
 	width: 120px;
 	border-radius: 6px;
 	display: none;
+	z-index: 10;
 }
 
 #bbpress-forums ul.bbp-action-links-dropdown.animated {
